--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>24</maven.compiler.release>
-        <exec.mainClass>edu.progAvUD.taller1.control.main</exec.mainClass>
+        <exec.mainClass>edu.progAvUD.taller1.control.Main</exec.mainClass>
     </properties>
 </project>
